# HackIllinois2025

./: README.md  gen_key.py  my_keypair.json  package-lock.json  package.json
frontend/pixsol/: config-overrides.js  package-lock.json  package.json
frontend/pixsol/public/: index.html
frontend/pixsol/src/: App.css  App.js
frontend/pixsol/src/assets/styles/: App.css
frontend/pixsol/src/components/auth/: UniversityVerification.jsx  WalletConnect.jsx
frontend/pixsol/src/components/canvas/: Canvas.jsx  CanvasLoader.jsx  Pixel.jsx
frontend/pixsol/src/components/hooks/: useCanvas.jsx  useWallet.jsx
frontend/pixsol/src/components/layout/: Footer.jsx  Header.jsx  Layout.jsx
frontend/pixsol/src/components/nft/: NFTGallery.jsx
frontend/pixsol/src/components/pages/: CanvasPage.jsx  HomePage.jsx  MerchStore.jsx  MerchStorePage.jsx  Profile.jsx  RSORegister.jsx
frontend/pixsol/src/styles/: Canvas.css  Header.css  HomePage.css  MerchStore.css  WalletConnect.css
pixsol/: Anchor.toml  package.json
pixsol/app/: app.ts  new_key.json  pixsol.json  solana-keypair.json
pixsol/programs/pixsol/: Cargo.toml
pixsol/programs/pixsol/src/: lib.rs
pixsol/tests/: pixsol.ts
server/: Anchor.toml  package.json
server/contracts/pixsol/: Cargo.toml
server/contracts/pixsol/src/: lib.rs
temp/: package.json
temp/server/: app.js  gen_wallet.js
temp/server/config/: solana.js
temp/server/controllers/: profile.js  wallet.js
temp/server/data/canvas/: event-3.json  event-3_history.json
temp/server/routes/: canvas.js  index.js
temp/server/solana/: walletInterface.js
(+5 files in other folders)
